/*
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
*/

syntax = "proto3";

package shim;

message ColumnDefinition {
	string name = 1;
	enum Type {
    STRING = 0;
		INT32 = 1;
		INT64 = 2;
		UINT32 = 3;
		UINT64 = 4;
		BYTES = 5;
		BOOL = 6;
  }
	Type type = 2;
	bool key = 3;
}

message Table {
    string name = 1;
    repeated ColumnDefinition columnDefinitions = 2;
}

message Column {
	oneof value {
    string string = 1;
    int32 int32 = 2;
		int64 int64 = 3;
		uint32 uint32 = 4;
		uint64 uint64 = 5;
		bytes bytes = 6;
		bool bool = 7;
  }
}

message Row {
	repeated Column columns = 1;
}
